# packe

./: README.md  config.example.yaml  pyproject.toml  runner_stub.bash
.github/workflows/: main.yaml
bash-exec/: exec.bash
bash-exec/utils.bash/: colors.bash  source-me.bash
pyrun/: _cli.py  _config.py  _config_file.py  _config_wrapper.py  _root.py  main.py
pyrun/_exec/: bash_exec_prefix.py  exec_prefix.py
pyrun/_matching/: script_selectors.py
pyrun/_print/: __init__.py
pyrun/_scripts/: matched_set.py  pack.py  pretty_print.py  runnable.py  script.py
pyrun/bash-exec/utils.bash/: add-startup.bash  source-me.bash
runner/: _cli.py  _config_file.py  _from_config.py  all_scripts.py  api.py  cli.py  main.py
runner/_exec/: exec_prefix.py
runner/_matching/: script_selectors.py
runner/_scripts/: matched_set.py  pack.py  pretty_print.py  runnable.py  script.py
runner/exec/: __init__.py  exec_prefix.py
runner/matching/: script_selectors.py
runner/scripts/: indexed.py  pack.py  pretty_print.py  runnable.py  script.py
spack/: _cli.py  main.py
spack/_exec/: bash_exec_prefix.py
spack/_scripts/: pack.py
testdata/: before.bash  config.yaml
testdata/one/: 1.first.bash  3.more.bash
testdata/prerun-fail/: 2.second.bash
testdata/prerun-pass/: 1.first.bash
testdata/two/1.first/: 1.first.bash
testdata/two/4.more/: 3.more.bash
