[tool.poetry]
name = "pyrun"
version = "0.5.0"
description = "Runs bash scripts and stuff"
authors = ["GregRos <gregros@gregros.dev>"]
readme = "README.md"
packages = [{ include = "pyrun" }]
[tool.poetry.dependencies]
python = "3.11.*"
pygments = "^2.19.1"
termcolor = "^2.5.0"
typeguard = "2.13.*"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
pyrun = "pyrun.main:start"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.setuptools.package-data]
"*" = ["*.*"]
