[tool.poetry]
name = "spack"
version = "0.5.0"
description = "Flexible bash script runner."
authors = ["GregRos <gregros@gregros.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GregRos/spack"
include = [
    { path = "spack/" },
    { path = "README.md" },
    { path = "pyproject.toml" },
]
[tool.poetry.dependencies]
python = "3.11.*"
pygments = "^2.19.1"
termcolor = "^2.5.0"
typeguard = "2.13.*"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
spack = "spack.main:start"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
